--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,11 @@ github:
   repository_nwo: Hyperfoil/Hyperfoil
   repository_url: https://github.com/Hyperfoil/Hyperfoil
 
+last_release:
+  zip: hyperfoil-0.1-SNAPSHOT.zip
+  dir: hyperfoil-0.1-SNAPSHOT
+  url: https://github.com/Hyperfoil/Hyperfoil/releases/download/pre-alpha/hyperfoil-0.1-SNAPSHOT.zip
+
 # Build settings
 markdown: kramdown
 theme: jekyll-theme-minimal
