--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,8 @@ last_release:
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-minimal
+#theme: jekyll-theme-minimal
+theme: jekyll-theme-slate
 plugins:
   - jekyll-feed
 
