--- a/_config.yml
+++ b/_config.yml
@@ -33,10 +33,10 @@ last_release:
 
 # Build settings
 markdown: kramdown
-#theme: jekyll-theme-minimal
 theme: jekyll-theme-slate
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
