--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ theme: jekyll-theme-slate
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-redirect-from
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
