--- a/_data/docs.yaml
+++ b/_data/docs.yaml
@@ -13,6 +13,8 @@
 - title: Controller REST API
   link: /docs/restapi.html
   description: Learn to interact with the controller
+- title: Frequently Asked Questions
+  link: /docs/faq.html
 - title: Topics
   link: /docs/topics.html
   description: Benchmarking is hard. Let's talk about that.
