--- a/_data/docs.yaml
+++ b/_data/docs.yaml
@@ -52,6 +52,8 @@
       link: /userguide/benchmark/phases.html
     - title: Scenario
       link: /userguide/benchmark/scenario.html
+  - title: Examples
+    link: /userguide/examples.html
   - title: Troubleshooting
     link: /userguide/troubleshooting.html
 - title: Reference
