--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,12 @@ plugins:
   - jekyll-seo-tag
   - jekyll-redirect-from
 
+# We use highlight.js explicitly
+highlighter: none
+kramdown:
+   syntax_highlighter_opts:
+      disable : true
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
